feat: implement Google OAuth, Landing Page, and AI-powered CV upload
- [Auth] Setup Google Authentication using Supabase/Next Auth
- [UI] Build responsive Landing Page and Dashboard boilerplate with Next.js 14
- [AI] Integrate Google Generative AI (Gemini) to parse and generate CV data
- [Database] Store AI-generated CV results into Supabase

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@google/genai": "^1.38.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.2",
+    "lucide-react": "^0.563.0",
     "next": "14.2.23",
     "openai": "^6.17.0",
     "react": "^18.3.1",
