--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts",
     "next.config.mjs"
-  ],
+, "src/app/dashboard/test.js"  ],
   "exclude": [
     "node_modules"
   ]
