--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.38.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.2",
+    "axios": "^1.13.4",
     "lucide-react": "^0.563.0",
     "next": "14.2.23",
     "openai": "^6.17.0",
