--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@google/genai": "^1.38.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.2",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
     "axios": "^1.13.4",
     "lucide-react": "^0.563.0",
     "next": "14.2.23",
