--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "**/*.mts",
     "next.config.mjs",
     "src/app/(app)/test.js"
-  ],
+, "src/app/(app)/profile"  ],
   "exclude": ["node_modules"]
 }
