feat: implement AI skill gap analysis and automated job alerts via Resend
- [AI] Implement skill gap analysis between user CV and job requirements using Gemini
- [Job] Build comprehensive job detail view and requirement breakdown
- [Automation] Setup Cron Job for periodic job alert processing
- [Email] Integrate Resend as the email bridge for automated job notifications
- [Backend] Create matching logic to trigger alerts based on user skill sets

--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.21",
     "@anthropic-ai/sdk": "^0.71.2",
     "@google/genai": "^1.38.0",
+    "@react-email/components": "^1.0.7",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.2",
+    "@upstash/qstash": "^2.9.0",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.1",
+    "ai": "^6.0.70",
     "axios": "^1.13.4",
     "lucide-react": "^0.563.0",
     "next": "14.2.23",
+    "next-auth": "^4.24.13",
     "openai": "^6.17.0",
+    "pdf-text-reader": "^5.1.1",
+    "pdfjs-dist": "^5.4.624",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^6.9.1"
