--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^3.0.21",
-    "@anthropic-ai/sdk": "^0.71.2",
     "@google/genai": "^1.38.0",
     "@react-email/components": "^1.0.7",
     "@supabase/ssr": "^0.8.0",
@@ -25,11 +24,10 @@
     "next": "14.2.23",
     "next-auth": "^4.24.13",
     "openai": "^6.17.0",
-    "pdf-text-reader": "^5.1.1",
-    "pdfjs-dist": "^5.4.624",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "resend": "^6.9.1"
+    "resend": "^6.9.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
