--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write"
@@ -20,6 +20,7 @@
     "@upstash/redis": "^1.36.1",
     "ai": "^6.0.70",
     "axios": "^1.13.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "14.2.23",
     "next-auth": "^4.24.13",
