--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openai": "^6.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-select": "^5.10.2",
     "resend": "^6.9.1",
     "sonner": "^2.0.7"
   },
