--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/groq": "^3.0.21",
     "@google/genai": "^1.38.0",
     "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.2",
     "@upstash/qstash": "^2.9.0",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.563.0",
     "next": "14.2.23",
     "next-auth": "^4.24.13",
+    "nodemailer": "^8.0.0",
     "openai": "^6.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
