--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/groq": "^3.0.21",
     "@google/genai": "^1.38.0",
+    "@prisma/client": "^6.16.2",
     "@react-email/components": "^1.0.7",
     "@react-email/render": "^2.0.4",
     "@supabase/ssr": "^0.8.0",
@@ -25,21 +26,21 @@
     "lucide-react": "^0.563.0",
     "next": "14.2.23",
     "next-auth": "^4.24.13",
-    "nodemailer": "^8.0.0",
+    "nodemailer": "^7.0.7",
     "openai": "^6.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-select": "^5.10.2",
     "resend": "^6.9.1",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@prisma/client": "^6.16.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "babel-plugin-react-compiler": "1.0.0",
     "prisma": "^6.16.2",
     "tailwindcss": "^4",
